--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /Packages
 xcuserdata/
 DerivedData/
+.nvim/
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 .netrc
